<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/search_edit_text"
        style="@style/Theme.SearchField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal_3"
        android:background="@drawable/rounded_corners"
        android:elevation="2dp"
        android:enabled="false"
        android:hint="@string/search_counters"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.6"
        android:background="@drawable/rounded_corners"
        android:elevation="2dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/search_edit_text"
        app:layout_constraintEnd_toEndOf="@id/search_edit_text"
        app:layout_constraintStart_toStartOf="@id/search_edit_text"
        app:layout_constraintTop_toTopOf="@id/search_edit_text" />

    <TextView
        android:id="@+id/empty_state_title_label"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_counters"
        app:layout_constraintBottom_toTopOf="@+id/empty_state_description_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/empty_state_description_label"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_counters_phrase"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empty_state_title_label" />

</androidx.constraintlayout.widget.ConstraintLayout>