<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="16dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Cups of coffee" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/normal_actions_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="plus_icon,count_text,minus_icon" />

    <ImageButton
        android:id="@+id/minus_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_minus_color_primary"
        android:contentDescription="@string/decrease_counter"
        app:layout_constraintBottom_toBottomOf="@id/name_label"
        app:layout_constraintEnd_toStartOf="@+id/count_text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/name_label"
        app:layout_constraintTop_toTopOf="@id/name_label" />

    <TextView
        android:id="@+id/count_text"
        style="@style/Theme.Text.SmallBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toBottomOf="@id/name_label"
        app:layout_constraintEnd_toStartOf="@+id/plus_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minus_icon"
        app:layout_constraintTop_toTopOf="@id/name_label"
        tools:text="5" />

    <ImageButton
        android:id="@+id/plus_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_plus_color_primary"
        android:contentDescription="@string/increase_counter"
        app:layout_constraintBottom_toBottomOf="@id/name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/count_text"
        app:layout_constraintTop_toTopOf="@id/name_label" />

    <ImageButton
        android:id="@+id/selected_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/ic_check"
        android:contentDescription="@string/ic_description_selected_item"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/name_label"
        app:layout_constraintTop_toTopOf="@id/name_label" />

    <View
        android:id="@+id/item_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.4"
        android:background="@drawable/rounded_corners_primary_r12"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>